[NT] Correctly visible collapsed sidebar in Admin Panel...
broken after adding CollapsedCustomAttribute
and `Object.is` polyfill for Internet Explorer

--- a/app/Resources/views/redo/styles/resources-list-element.scss
+++ b/app/Resources/views/redo/styles/resources-list-element.scss
@@ -82,7 +82,7 @@ $collapsible-metadata-list-toggle-height: $default-line-height * 1em;
           color: $lightish-grey;
         }
       }
-      .collapsible-with-visible-first-line {
+      .with-visible-first-line {
         position: relative;
         max-width: calc(100% - 2 * #{$default-gap-size / 8} - #{$collapsible-metadata-list-toggle-width});
         &.expanding, &.expanded {
